# lark

./: Cargo.toml  Makefile  Readme.md  nohup.out
src/: lib.rs  main.rs
src/components/: mod.rs
src/components/chat/: chat_message.rs  chat_model.rs  chat_style.rs  chat_view.rs  controller.rs  event.rs  message_renderer.rs  mod.rs  model.rs  view.rs
src/components/panels/: avatar.rs  chat_list.rs  chat_main.rs  left_nav.rs  main.rs  windows.rs
src/components/splash/: mod.rs
src/resources/: mod.rs  setup.rs  theme.rs
