[package]
name = "lark"
version = "0.1.0"
edition = "2021"

#[lib]
#crate-type = ["cdylib", "rlib"]
#name = "lark"
#path = "src/lib.rs"

[dependencies]
bevy_svg = { version = "0.14.0", features = ["2d"], default-features = false }
bevy = "0.14.2"
bevy_egui = { version = "0.30.0", features = ["default_fonts"] }
embed-resource = "2.5.0"
chrono = "0.4.38"
#hot-lib-reloader = "0.6"
